fix responsive design flaws on mobile

--- a/static/css/sass.scss
+++ b/static/css/sass.scss
@@ -179,8 +179,9 @@ main {
      .box {
         background: white;
         height: 350px;
-        min-width: 350px;
+        width: 350px;
         margin: 25px 35px;
+        max-width: 100vw !important;
         .card-text {
             height: 58%;
             font-size: 1.2rem;
@@ -224,6 +225,7 @@ footer {
         color: white;
         text-decoration: none;
         border-bottom: 3px solid gray;
+        word-break: break-all;
     }
     a:hover {
         color: gray;
@@ -504,6 +506,11 @@ a.navbar-brand:hover {
 
 
 @media(max-width: 500px) {
+    .box { 
+        margin-right: 0;
+        margin-left: 0;
+        max-width: 100vw !important;
+    }
     #adobe-dc-view {
         max-height: 700px !important;
     }
