--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -292,8 +292,9 @@ main address p {
 main .box {
   background: white;
   height: 350px;
-  min-width: 350px;
+  width: 350px;
   margin: 25px 35px;
+  max-width: 100vw !important;
 }
 main .box .card-text {
   height: 58%;
@@ -335,6 +336,7 @@ footer a {
   color: white;
   text-decoration: none;
   border-bottom: 3px solid gray;
+  word-break: break-all;
 }
 footer a:hover {
   color: gray;
@@ -608,6 +610,12 @@ a.navbar-brand:hover {
   }
 }
 @media (max-width: 500px) {
+  .box {
+    margin-right: 0;
+    margin-left: 0;
+    max-width: 100vw !important;
+  }
+
   #adobe-dc-view {
     max-height: 700px !important;
   }
